force-app/main/default/objects/Consent_Request_Item__c/Consent_Request_Item__c.object-meta.xml
<CustomObject>
    <description>记录每次名单上传中的每一位 Data Subject 行项目、校验、去重、链接与状态</description>
    <label>Consent Request</label>
    <nameField>
        <displayFormat>CRI-{00000}</displayFormat>
        <label>Consent Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>