force-app/main/default/objects/Consent_Request_Item__c/fields/Active_Request_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Request_Key__c</fullName>
    <description>Unique key for one active request per Data Subject, Account and consent purpose. Terminal requests clear this field.</description>
    <label>Active Request Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>