force-app/main/default/objects/Consent_Request_Item__c/fields/Authorization_QR_Viewed_At__c.field-meta.xml
<CustomField>
    <fullName>Authorization_QR_Viewed_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Time</label>
    <type>DateTime</type>
</CustomField>