force-app/main/default/objects/Consent_Request_Item__c/fields/Client_View_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Client_View_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>客户可见</label>
    <type>Checkbox</type>
</CustomField>