force-app/main/default/objects/Consent_Request_Item__c/fields/Consent_Link__c.field-meta.xml
<CustomField>
    <fullName>Consent_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>唯一链接</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>