force-app/main/default/objects/Consent_Request_Item__c/fields/Consent_Link_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Consent_Link_Expires_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>链接到期时间</label>
    <type>DateTime</type>
</CustomField>