force-app/main/default/objects/Consent_Request_Item__c/fields/Consent_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Consent_Purpose__c</fullName>
    <description>Controlled purpose used to separate active consent request cycles.</description>
    <label>Consent Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per-Report Consent</fullName>
            </value>
            <value>
                <fullName>Term-Based Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>