force-app/main/default/objects/Consent_Request_Item__c/fields/Consent_Request_Case__c.field-meta.xml
<CustomField>
    <fullName>Consent_Request_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Consent Request Items</relationshipLabel>
    <relationshipName>Consent_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>