force-app/main/default/objects/Consent_Request_Item__c/fields/Dedup_Status__c.field-meta.xml
<CustomField>
    <fullName>Dedup_Status__c</fullName>
    <label>去重状态</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Unique</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>