force-app/main/default/objects/Consent_Request_Item__c/fields/Email_Authorize_Url__c.field-meta.xml
<CustomField>
    <fullName>Email_Authorize_Url__c</fullName>
    <description>Resolved authorize URL generated by ConsentGuestAuthService for email templates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Authorize Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>