force-app/main/default/objects/Consent_Request_Item__c/fields/Email_Withdraw_Url__c.field-meta.xml
<CustomField>
    <fullName>Email_Withdraw_Url__c</fullName>
    <description>Resolved withdrawal URL generated by ConsentGuestAuthService for email templates.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Withdraw Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>