force-app/main/default/objects/Consent_Request_Item__c/fields/File_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>File_Validation_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>文件校验信息</label>
    <length>255</length>
    <type>Text</type>
</CustomField>