force-app/main/default/objects/Consent_Request_Item__c/fields/File_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Validation_Status__c</fullName>
    <label>文件校验状态</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>