force-app/main/default/objects/Consent_Request_Item__c/fields/Secure_Token__c.field-meta.xml
<CustomField>
    <fullName>Secure_Token__c</fullName>
    <description>Cryptographic token for Guest consent link validation (F-064). Not exposed to Guest Profile FLS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secure Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>