force-app/main/default/objects/Consent_Request_Item__c/fields/Singpass_Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>Singpass_Source_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Singpass来源引用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>