force-app/main/default/objects/Consent_Request_Item__c/fields/Uploaded_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>上传出生日期</label>
    <type>Date</type>
</CustomField>