force-app/main/default/objects/Consent_Request_Item__c/fields/Uploaded_Email__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>上传邮箱</label>
    <type>Email</type>
</CustomField>