force-app/main/default/objects/Consent_Request_Item__c/fields/Uploaded_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Employment_Status__c</fullName>
    <label>上传雇佣状态</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>