force-app/main/default/objects/Consent_Request_Item__c/fields/Uploaded_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>上传全名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>