force-app/main/default/objects/Consent_Request_Item__c/fields/Uploaded_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>上传证件号码</label>
    <length>50</length>
    <type>Text</type>
</CustomField>