force-app/main/default/objects/Consent_Request_Item__c/fields/Uploaded_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_ID_Type__c</fullName>
    <label>上传证件类型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NRIC</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>