force-app/main/default/objects/Consent_Request_Item__c/fields/Withdrawal_QR_Viewed_At__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_QR_Viewed_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Withdrawal Time</label>
    <type>DateTime</type>
</CustomField>