force-app/main/default/objects/Consent_Request_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Subject__c</columns>
    <columns>Uploaded_Full_Name__c</columns>
    <columns>Uploaded_Email__c</columns>
    <columns>Uploaded_ID_Type__c</columns>
    <columns>Uploaded_ID_Number__c</columns>
    <columns>Uploaded_Employment_Status__c</columns>
    <columns>Current_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>